--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.11.2",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.87.1",
+    "@xstate/react": "^6.0.0",
+    "bootstrap-icons": "^1.13.1",
     "next": "16.0.10",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "react-redux": "^9.2.0",
+    "xstate": "^5.25.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
